# simpified_nbody

./: CMakeLists.txt  Particle.cpp  Particle.h  README.md  main.cpp
Camera/: Camera.cpp
Shaders/glsl/: forceCalculation.glsl  fragmentShader.glsl  updateParticles.glsl
Window/: WindowInputManager.cpp  WindowInputManager.h
